#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package AppUtils
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-11
2013-01-16 Andy Salnikov
- fix in AppCmdOptSize, _changed flag was not updated

Tag: V00-01-10
2011-10-24 Andy Salnikov
- removed include Lusi.h

Tag: V00-01-09
2011-10-12 Andy Salnikov
- clone LusiPython/LusiPyApp as AppBase claass in this package, LusiPyApp
  becomes deprecated

Tag: V00-01-08
2011-08-18 Andy Salnikov
- implemented Python version of AppDataPath class

Tag: V00-01-07
2011-08-17 Andy Salnikov
- new class AppDataPath which finds a file in $SIT_DATA path
- new unit test for AppDataPath class
- new data file data/file-for-AppDataPath-unit-test needed for unit test

Tag: V00-01-05
2009-12-04 Andy Salnikov
- bug fix in AppCmdLine, empty long and short options were matched

Tag: V00-01-04
2009-05-13 Andy Salnikov
- added AppCmdLine::cmdline() method to return complete command line

Tag: V00-01-03
2009-05-13 Andy Salnikov
- AppCmdOptList now has value() method wich returns the reference to whole collection
- The "option file" option has now class AppCmdOptList, can specify multiple option files

Tag: V00-01-02
2009-03-13 Andy Salnikov
- new option type AptCmdOptSize
- several new unit tests added

Tag: V00-01-00
2009-03-13 Andy Salnikov
- adding new option class AppCmtoptBool
- adding the ability to read options from the options file
- introduce exceptions, many methods now throw exceptions instead of 
  returning error codes 
- extended README, looks like ref. manual now

Tag: V00-00-06
2009-02-05 Andy Salnikov
- gcc41 found a bug in AppBase.h, assignment op returned object instead
  of reference 

Tag: V00-00-05
2008-12-02 Andy Salnikov