@@ -31,19 +31,16 @@
 // 		-- Class Interface --
 //		---------------------
 
+namespace AppUtils {
+
 /**
- *
  *  This software was developed for the LUSI project.  If you use all or
  *  part of it, please give an appropriate acknowledgement.
- *
- *  @see AdditionalClass
  *
  *  @version $Id$
  *
  *  @author Andrei Salnikov
  */
-
-namespace AppUtils {
 
 class AppCmdException : public std::runtime_error {
 public:
