@@ -39,8 +39,13 @@ extern "C" {
 // 		-- Class Interface --
 //		---------------------
 
+namespace AppUtils {
+
+/// @addtogroup AppUtils
 
 /**
+ *  @ingroup AppUtils
+ *
  *  This class defines a command line option with argument. This is a templated
  *  class parameterized by the type of the argument. Any type supported by the
  *  AppCmdTypeTraits can be used as a template parameter.
@@ -57,7 +62,6 @@ extern "C" {
  *  @author Andy Salnikov	(originator)
  */
 
-namespace AppUtils {
 
 template<class Type>
 class AppCmdOpt : public AppCmdOptBase {
@@ -105,7 +109,7 @@ public:
   virtual const std::string& description() const throw() ;
 
   /**
-   *  Return short option symbol for -x option, or '\0' if no short option
+   *  Return short option symbol for -x option, or @c NULL if no short option
    */
   virtual char shortOption() const throw() ;
 
